cmake_minimum_required(VERSION 3.9.3)

project(complex)
project(rational)
project(vec3d)
project(vec3d_t)
project(array)
project(matrix_r)
project(matrix_u)
project(stackl)

add_subdirectory(complex)
add_subdirectory(rational)
add_subdirectory(vec3d)
add_subdirectory(vec3d_t)
add_subdirectory(array)
add_subdirectory(matrix_r)
add_subdirectory(matrix_u)
add_subdirectory(stackl)