cmake_minimum_required(VERSION 3.9.3)

PROJECT( kochnev_r_u )

ADD_SUBDIRECTORY( complex )
ADD_SUBDIRECTORY( rational )
ADD_SUBDIRECTORY( vec3d )
ADD_SUBDIRECTORY( vec3d_t )
ADD_SUBDIRECTORY( array )
ADD_SUBDIRECTORY( matrix_r )
ADD_SUBDIRECTORY( matrix_u )
ADD_SUBDIRECTORY( stackl )
ADD_SUBDIRECTORY( priorityqueuel )